[package]
# Metadata
authors = ["LibYML Contributors"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A safe and efficient Rust library for parsing and emitting YAML data"
documentation = "https://docs.rs/libyml"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://libyml.com"
keywords = ["yaml", "serde", "serialization"]
license = "MIT"
name = "libyml"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/libyml"
rust-version = "1.60"
version = "0.0.3"

# Included and excluded files
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# [[bench]]
# name = "benchmark"
# harness = false
# path = "benches/criterion.rs"

# [profile.bench]
# debug = true

[dev-dependencies]
# Development dependencies
pretty_assertions = "1.4.0"
libyml-test-suite = { path = "tests/data" }

[features]
# No default features
default = []

[lib]
# Library configuration options
crate-type = ["lib"]
name = "libyml"
path = "src/lib.rs"
required-features = []
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

# Linting config
[lints.rust]

## Warn
# box_pointers = "warn"
missing_copy_implementations = "warn"
# missing_docs = "warn"
# unstable_features = "warn"
# unused_crate_dependencies = "warn"
# unused_extern_crates = "warn"
# unused_results = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
# missing_docs = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
pointer_structural_match = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"


[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
