[package]
name = "libyml-test-suite"
version = "0.0.0"
authors = ["LibYML Contributors"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"

[build-dependencies]
anyhow = "1.0.82"
flate2 = "1.0.29"
reqwest = { version = "0.12.4", features = ["blocking"] }
tar = "0.4.40"
